--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "invoke>=2.2.0",
     "mypy>=1.15.0",
     "pytest>=8.3.5",
+    "pytest-asyncio>=1.0.0",
     "rich>=14.0.0",
     "ruff>=0.11.8",
     "yamllint>=1.37.0",
