--- a/.env
+++ b/.env
@@ -5,11 +5,4 @@
 # Set to your Infrahub server URL (required for full functionality)
 # INFRAHUB_ADDRESS=http://localhost:8000
 
-# Kafka Configuration (optional - for event publishing)
-# KAFKA_ENABLED=true
-# KAFKA_BOOTSTRAP_SERVERS=localhost:9092
-# KAFKA_SERVICE_TOPIC=franc.service_requests
-# KAFKA_STATUS_TOPIC=franc.task_status
-# KAFKA_COMPLETION_TOPIC=franc.task_completion
-
-# For testing without Infrahub/Kafka, leave all commented out
+# For testing without Infrahub, leave all commented out
