--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 # INFRAHUB_ADDRESS=http://localhost:8000
 
 # For testing without Infrahub, leave all commented out
+INFRAHUB_ADDRESS=http://localhost:8000
+INFRAHUB_API_TOKEN="06438eb2-8019-4776-878c-0941b1f1d1ec"
+
